# drust-cleaner

./: .gitignore  Cargo.toml  README.md  latest.json
crates/cleaner-cli/: Cargo.toml
crates/cleaner-cli/src/: main.rs
crates/cleaner-core/: Cargo.toml
crates/cleaner-core/src/: config.rs  engine.rs
src/: config.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
