[package]
name = "cleaner-gui"
version = "1.1.0"
edition = "2024"

[lib]
name = "cleaner_gui_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
cleaner-core = { path = "../crates/cleaner-core" }
toml = "1.0.6"
serde_json = "1"
